fixes stretchy search field issues with category breadcrumbs

--- a/resources/css/list-mobile.css
+++ b/resources/css/list-mobile.css
@@ -66,7 +66,6 @@ h1 a {
 	color: black;
 }
 
-
 #category-breadcrumbs {
 	font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande";
 	font-weight: 700;
@@ -157,7 +156,11 @@ input#search.places-search {
 	font-weight: 700;
 	display: inline-block;
 	width: 100px;
+	min-width: 100px;
 	padding: 0;
+	margin: 0;
+	border-radius: 0;
+	text-indent: 0;
 }
 
 .search-separator {
